fixed animation flickering on hovering vc list descriptions

--- a/app.css
+++ b/app.css
@@ -2,7 +2,6 @@
   margin: 0px 0px;
   font-family: Lato, sans-serif, serif;
   box-sizing: border-box;
-  font-size: 18px;
 }
 body {
   margin: 0;
@@ -10,14 +9,13 @@ body {
   overflow-x: hidden;
 }
 .font_btn {
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 16px;
 }
-#vc_list {
-  /* margin-top: -5px; */
-}
+
 .nav-bar {
-  padding: 0.5rem 2.5rem !important;
+  padding: 5px 0 5px 15%;
+
+  /* padding: 0.5rem 2.5rem !important; */
   background-color: #343a40 !important;
 }
 .nav__wrapper {
@@ -59,7 +57,7 @@ body {
 }
 .right-wrapper {
   background-color: white;
-  padding: 10px 10px;
+  padding: 0px 10px 0 10px;
   margin-top: 26px;
 }
 .brand_name {
@@ -72,12 +70,17 @@ body {
   cursor: pointer;
 }
 .section-top {
+  height: 405px;
   background-color: #edf0f0;
   width: 100%;
   margin-top: -3rem;
 }
 
 .top-content {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+
   padding: 1rem 2.5rem;
   padding-bottom: 3rem;
 }
@@ -99,6 +102,17 @@ body {
   box-shadow: 0px 7px 13px -8px rgba(0, 0, 0, 0.34);
   border-radius: 5px;
 }
+.form_wrapper button {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  align-self: center;
+}
+.form_wrapper label {
+  display: inline-block;
+  margin-bottom: -0.5rem;
+}
+
 .list-group-item {
   padding: 10px 10px;
 }
@@ -122,11 +136,6 @@ body {
 }
 .vc__add:hover {
   color: #fff;
-}
-
-.icon-add {
-  widows: 20px;
-  height: 20px;
 }
 
 .btn-outline-info {
@@ -168,7 +177,7 @@ body {
 } */
 @keyframes slideL {
   100% {
-    transform: translateX(-1rem);
+    transform: translateX(-2rem);
   }
 }
 @keyframes fadein {
@@ -199,7 +208,7 @@ body {
   animation: slideL forwards ease-in 0.2s;
 }
 .vc_desc:hover .delete {
-  animation: fadein forwards 0.2s;
+  animation: fadein initial 0.2s;
   opacity: 1;
 }
 .footer {
